<resources>
    <string name="app_name">Share Task App</string>
    <string name="title_home">Class</string>
    <string name="class_detail_label" />
    <string name="title_playground">Playground</string>
    <string name="title_calendar">Calendar</string>
    <string name="title_profile">Profile</string>

    <string name="time_remaining">%1$d days %2$d hours remaining</string>
    <string name="mark_done_title">Mark Done</string>
    <string name="mark_undone_title">Mark Undone</string>
    <string name="update_title">Update</string>
    <string name="edit_title">Edit</string>
    <string name="delete_title">Delete</string>

    <string name="delete_class_confirmation_title">Delete Class</string>
    <string name="delete_class_confirmation_message">Apakah Anda yakin ingin menghapus kelas ini?</string>
    <string name="delete_task_confirmation_title">Delete Task</string>
    <string name="delete_task_confirmation_message">Apakah Anda yakin ingin menghapus task ini?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>

    <string name="calendar_content_description">Tanggal dengan deadline ditandai dengan lingkaran.</string>

    <string name="task_not_done">Not Done</string>
    <string name="task_done">Done</string>

    <string name="task_add">Add Task</string>
    <string name="task_update">Update Task</string>
    <string name="time_display">00:00:00</string>
    <string name="start_button">Start</string>
    <string name="stop_button">Stop</string>
    <string name="reset_button">Reset</string>
    <string name="first_number">First Number</string>
    <string name="second_number">Second Number</string>
    <string name="result">Result</string>
    <string name="add">Add</string>
    <string name="subtract">Subtract</string>
    <string name="multiply">Multiply</string>
    <string name="divide">Divide</string>

    <string name="name_profile">Name</string>
    <string name="address_profile">Address</string>
    <string name="save">Save</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile_image">Profile Image</string>
    <string name="change_photo">Change Photo</string>
    <string name="name_input">Name</string>
    <string name="email_input">Email</string>
    <string name="phone_input">Phone</string>
    <string name="save_button">Save</string>
    <string name="change_theme_button">Change Theme</string>
    <string name="open_class">Open Class</string>
    <string name="create_class">Create Class</string>
    <string name="header">header</string>
    <string name="class_name">Class Name</string>
    <string name="more_options">More Options</string>
    <string name="class_code">Class Code</string>
    <string name="icon_class">Icon Class</string>
    <string name="task_name">Task Name</string>
    <string name="task_description">Task Description</string>
    <string name="task_deadline">Task Deadline</string>
    <string name="enter_time_in_seconds">Enter time in seconds</string>
    <string name="_00_00_00">00:00:00</string>
    <string name="start">Start</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
    <string name="share">Share</string>
    <string name="delete_class_options_title">Delete Options</string>
    <string name="delete_from_list">Delete from List</string>
    <string name="delete_from_database">Delete from Database</string>

    <string name="pomodoro_info">Teknik Pomodoro adalah metode manajemen waktu yang mengharuskan belajar/bekerja dalam blok waktu singkat (biasanya 25 menit), diikuti dengan istirahat singkat (biasanya 5 menit). Manfaatkan Teknik Pomodoro untuk meningkatkan fokus, produktivitas, dan kesejahteraan Anda selama bekerja.</string>
    <string name="pomodoro_info_button">Pelajari Teknik Pomodoro</string>
    <string name="add_a_class_to_get_started">Add a class to get started!</string>

</resources>