<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ui.playground.TimerFragment">

    <EditText
        android:id="@+id/inputTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/enter_time_in_seconds"
        android:inputType="number" />

    <TextView
        android:id="@+id/timeDisplay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/_00_00_00"
        android:textSize="24sp" />

    <Button
        android:id="@+id/startButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:textColor="@color/md_theme_onPrimaryContainer" />

    <Button
        android:id="@+id/playButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/play"
        android:textColor="@color/md_theme_onPrimaryContainer" />

    <Button
        android:id="@+id/pauseButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/pause"
        android:textColor="@color/md_theme_onPrimaryContainer" />

    <Button
        android:id="@+id/stopButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stop"
        android:textColor="@color/md_theme_onPrimaryContainer" />

    <Button
        android:id="@+id/pomodoroInfoButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pomodoro_info_button"
        android:textColor="@color/md_theme_onPrimaryContainer" />

</LinearLayout>