<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_mark_done"
        android:icon="@drawable/baseline_done_24"
        android:title="@string/mark_done_title"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/action_mark_undone"
        android:icon="@drawable/baseline_remove_done_24"
        android:title="@string/mark_undone_title"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/action_edit_task"
        android:icon="@drawable/baseline_edit_24"
        android:title="@string/edit_title"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/action_delete_task"
        android:icon="@drawable/baseline_delete_24"
        android:title="@string/delete_title"
        app:showAsAction="ifRoom|withText" />
</menu>
