<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/task_name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/task_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/task_name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/task_description_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/task_description">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/task_description_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/task_deadline_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/task_deadline">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/task_deadline_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false" />

    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>